--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_picture">PictureActivity</string>
+    <string name="title_activity_gesture_test">GestureTest</string>
 
 </resources>
